<resources>
    <string name="app_name">stripe card details</string>
    <string name="action_settings">Settings</string>

    <!--ADD CARD UI-->
    <string name="addCard">Add Card</string>
    <string name="enterCardDetails">Enter your card details</string>
    <string name="cardType">Card Type</string>
    <string name="cardHolderName">CARD HOLDER\'S NAME</string>
    <string name="cardNumberHeader">CARD NUMBER</string>
    <string name="cardHolderNameLowerCase">Card Holder\'s Name</string>
    <string name="cardNumberHeaderLowerCase">Card Number</string>
    <string name="cardNumber">XXXX XXXX</string>
    <string name="month">MM</string>
    <string name="slash">\/</string>
    <string name="year">YY</string>
    <string name="cvv">CVV</string>
    <string name="save">SAVE</string>

    <!--ADD CARD MESSAGES-->
    <string name="invalidCardholderName">Please enter a valid name</string>
    <string name="invalidCardNumber">Please enter a valid card number</string>
    <string name="invalidCardExpMonth">Please enter a valid card exp month</string>
    <string name="invalidCardExpYear">Please enter a valid card exp year</string>
    <string name="invalidCardCvv">Please enter a valid CVV number</string>
    <string name="invalidCardDetails">Dont forget to add your real Stripe api key</string>
    <string name="successfullySavedCardDetails">Thank you, your card details have been saved</string>
    <string name="somethingWrong">Sorry, something went wrong</string>
    <string name="cardAddedToStripe">Card successfully added to Stripe</string>
    <string name="cardNotAddedToStripe">Card unsuccessfully added to Stripe</string>
    <string name="noInternetConnection">Dont forget to add your real api</string>

    <!--CARD DETAILS UI -->
    <string name="fullName">Full Name</string>
    <string name="cardDetails">Card Details</string>
</resources>
