<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Features.AddCardDetails.StripeAddCardDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:paddingTop="20dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/cardHeaderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterCardDetails"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardHeaderTV"
            android:background="@color/cardViewColour"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Card Type-->
                <RelativeLayout
                    android:id="@+id/cardTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:paddingTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/cardTypeHeaderTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardType"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/cardDetailsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardTypeLayout"
                    android:paddingTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp">

                    <EditText
                        android:id="@+id/cardHolderNameET"
                        style="@style/nameEditText"
                        android:hint="@string/cardHolderNameLowerCase"/>

                    <EditText
                        android:id="@+id/cardNumberET"
                        style="@style/cardNumberEditText"
                        android:layout_below="@id/cardHolderNameET"
                        android:hint="@string/cardNumberHeaderLowerCase"/>

                    <EditText
                        android:id="@+id/cardExpMonthET"
                        style="@style/addCardExpDetailsEditText"
                        android:layout_below="@id/cardNumberET"
                        android:layout_marginRight="5dp"
                        android:hint="@string/month"/>

                    <EditText
                        android:id="@+id/cardExpYearET"
                        style="@style/addCardExpDetailsEditText"
                        android:layout_below="@id/cardNumberET"
                        android:layout_toRightOf="@id/cardExpMonthET"
                        android:layout_marginRight="5dp"
                        android:hint="@string/year"/>

                    <EditText
                        android:id="@+id/cardCvvNumberET"
                        style="@style/addCardCvvDetailsEditText"
                        android:layout_below="@id/cardNumberET"
                        android:layout_toRightOf="@id/cardExpYearET"
                        android:hint="@string/cvv"/>

                </RelativeLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/saveBtn"
            style="@style/SaveButton"
            android:layout_alignParentBottom="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimary"/>

    </RelativeLayout>

</RelativeLayout>
